# fmcg-multi-agent-supply-chain-optimizer

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: streamlit_app.py
configs/: default.yaml
data/sample/: graph_sample.csv  mappings_sample.csv  supplygraph_sample.csv
demo_artifacts/: demand_intelligence_forecast_df.csv  demand_intelligence_metrics_df.csv  dispatch_optimization_path_df.csv  financial_impact_financial_table_df.csv  metadata.json  orchestration_trace.csv  pack_size_optimization_recommendations_df.csv  pipeline_metrics.csv  production_planning_production_schedule_df.csv  production_planning_utilisation_summary_df.csv
docs/: assumptions.md  data_dictionary.md  methodology.md  migration_inventory.md  model_card.md
experiments/: m5_forecasting_benchmark.py
scripts/: download_data.py  generate_sample_data.py  run_pipeline.py
src/fmcg_supply_chain/agents/: __init__.py  base.py  demand.py  dispatch.py  financial.py  pack_size.py  production.py
src/fmcg_supply_chain/data/: loaders.py
src/fmcg_supply_chain/orchestration/: orchestrator.py  state.py
tests/integration/: test_integration.py
tests/unit/: test_data.py  test_demand.py  test_dispatch.py  test_financial.py  test_m5.py  test_orchestrator.py  test_pack_size.py  test_production.py
