[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fmcg-supply-chain"
version = "0.1.0"
description = "A transparent decision-support pipeline for demand forecasting, pack-size planning, financial scenario analysis, production planning, and dispatch-network optimization."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Raywin Cruz"}
]
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.2.0",
    "networkx>=3.0",
    "streamlit>=1.32.0",
    "plotly>=5.18.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black==25.9.0",
    "ruff==0.15.17",
    "pre-commit>=3.0.0",
    "mypy>=1.0.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
